adding back jdk7 build container