@@ -75,7 +75,7 @@
              :debug {:debug true
                      :injections [(prn (into {} (System/getProperties)))]}
              :test         {:resource-paths ["dev-resources" "data"]
-                            :jvm-opts ^:replace ["-server" "-Xmx2g" "-XX:MaxPermSize=512m"]
+                            :jvm-opts ^:replace ["-server" "-Xmx2g"]
                             :aot            [sparkling.core
                                              sparkling.api
                                              sparkling.function
@@ -107,7 +107,7 @@
                     :output-dir                "doc"
                     :src-dir-uri               "https://raw.githubusercontent.com/gorillalabs/sparkling/v1.2.2/"
                     :src-linenum-anchor-prefix "L"}
-            :javac-options ["-Xlint:unchecked" "-source" "1.6" "-target" "1.6"]
+            :javac-options ["-Xlint:unchecked" "-source" "1.6" "-target" "1.7"]
             :jvm-opts ^:replace ["-server" "-Xmx1g"]
             :global-vars {*warn-on-reflection* false}
             :lein-release {:deploy-via :clojars}
